p4 OO game hitns

--- a/morea/11.oo/proj.html
+++ b/morea/11.oo/proj.html
@@ -64,6 +64,12 @@
 
 <p>Your <code>game.py</code> program must include a main method as we went over in class (see <code>card.py</code>). You are encouraged to think about creating additional classes besides <code>Card</code> that might help implement your game, such as <code>Deck</code> or <code>Hand</code>, but this is not a formal requirement.</p>
 
+<p><strong><em>Hints:</em></strong></p>
+
+<ul>
+  <li>Your first step should be drawin a mock-game play scenario for one game. What text will you output to the user? What will you ask them to input? How will you keep them aware of the status of their hand &amp; the game?</li>
+</ul>
+
 <h2 id="part-b-date">Part B: Date</h2>
 
 <p>Begin by creating a file <code>date.py</code>:</p>
@@ -409,7 +415,7 @@ False                           # so it should be False
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-04-22 10:24:28 -0400</span></p>
+       Last update on: <span>2016-04-22 12:37:40 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
