p4 OO game hints

--- a/morea/11.oo/proj.html
+++ b/morea/11.oo/proj.html
@@ -68,6 +68,9 @@
 
 <ul>
   <li>Your first step should be drawin a mock-game play scenario for one game. What text will you output to the user? What will you ask them to input? How will you keep them aware of the status of their hand &amp; the game?</li>
+  <li>Next think about what data you will need to keep track of throughout the game. How should you store that data? In a data structure like a list, or do you need to create additional classes?</li>
+  <li>Create an implementation plan. Try to think of your problem in terms of features. List them out. Prioritize the features that are critical to gameplay. Are there some features that you could leave until later or possibly leave out completely and still have a working game?</li>
+  <li>Start implementing your steps</li>
 </ul>
 
 <h2 id="part-b-date">Part B: Date</h2>
@@ -415,7 +418,7 @@ False                           # so it should be False
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-04-22 12:37:40 -0400</span></p>
+       Last update on: <span>2016-04-22 13:08:23 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
