--- a/morea/11.oo/proj.html
+++ b/morea/11.oo/proj.html
@@ -67,10 +67,29 @@
 <p><strong><em>Hints:</em></strong></p>
 
 <ul>
-  <li>Your first step should be drawin a mock-game play scenario for one game. What text will you output to the user? What will you ask them to input? How will you keep them aware of the status of their hand &amp; the game?</li>
-  <li>Next think about what data you will need to keep track of throughout the game. How should you store that data? In a data structure like a list, or do you need to create additional classes?</li>
-  <li>Create an implementation plan. Try to think of your problem in terms of features. List them out. Prioritize the features that are critical to gameplay. Are there some features that you could leave until later or possibly leave out completely and still have a working game?</li>
-  <li>Start implementing your steps</li>
+  <li>
+    <p>Your first step should be drawing a mock-game play scenario for one game. What text will you output to the user? What will you ask them to input? How will you keep them aware of the status of their hand &amp; the game?</p>
+
+    <p><strong>Example mock gameplay for crazy 8s:</strong></p>
+
+    <pre><code>  Hand: 3H 4C 7D 8S 2H 5C 10H AH
+         1  2  3  4  5  6   7  8
+	
+  Top of deck: 3D
+  Do you want to (A) draw or (B) play card?
+  &gt; B
+  Which card? (1-8)
+  &gt; 1
+  Computer drew a card
+  Top of deck: 3H
+  Do you want to (A) draw or (B) play card?
+	
+  ... etc ...
+</code></pre>
+  </li>
+  <li>Next think about what data you will need to keep track of throughout the game. How should you store that data? In a data structure like a list, single variables, or do you need to create additional classes?</li>
+  <li>Create an implementation plan. Try to think of your problem in terms of features. List them out. Prioritize the features that are critical to gameplay. Are there some features that you could leave until later or possibly leave out completely and still have a working game? Do some features need to be implemented before others?</li>
+  <li>Start implementing your features.</li>
 </ul>
 
 <h2 id="part-b-date">Part B: Date</h2>
@@ -418,7 +437,7 @@ False                           # so it should be False
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-04-22 13:08:23 -0400</span></p>
+       Last update on: <span>2016-04-22 14:02:50 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
