p4 OO game hints

--- a/morea/11.oo/proj.html
+++ b/morea/11.oo/proj.html
@@ -62,7 +62,7 @@
 
 <p>Using the <code>Card</code> class we went over in lecture (see <code>card.py</code>), create a file <code>game.py</code> that implements a basic card game. It can either require 2 players or 1 player and the computer. <strong>Every game <em>must</em> be unique.</strong></p>
 
-<p>Your <code>game.py</code> program must include a main method as we went over in class (see <code>card.py</code>). You are encouraged to think about creating additional classes besides <code>Card</code> that might help implement your game, such as <code>Deck</code> or <code>Hand</code>, but this is not a formal requirement.</p>
+<p>Your <code>game.py</code> program must include a <code>main</code> function as we went over in class (see <code>card.py</code>). You are encouraged to think about creating additional classes besides <code>Card</code> that might help implement your game, such as <code>Deck</code> or <code>Hand</code>, but this is not a formal requirement.</p>
 
 <p><strong><em>Hints:</em></strong></p>
 
@@ -80,7 +80,7 @@
   &gt; B
   Which card? (1-8)
   &gt; 1
-  Computer drew a card
+  Computer player drew a card
   Top of deck: 3H
   Do you want to (A) draw or (B) play card?
 	
@@ -437,7 +437,7 @@ False                           # so it should be False
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-04-22 14:02:50 -0400</span></p>
+       Last update on: <span>2016-04-22 14:36:35 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
