--- a/morea/11.oo/proj.html
+++ b/morea/11.oo/proj.html
@@ -132,7 +132,7 @@
         return False
 </code></pre>
 
-<p>You should also create a file <code>main.py</code> that you will use to test that your <code>Date</code> class works correctly. Make sure this file includes a main function that is called like we did in <code>card.py</code>.</p>
+<p>You should also create a file <code>main.py</code> that you will use to test that your <code>Date</code> class works correctly. Make sure this file includes a main function that is called like we did in <code>card2.py</code>.</p>
 
 <h3 id="understanding-date">Understanding <code>Date</code></h3>
 
@@ -437,7 +437,7 @@ False                           # so it should be False
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-04-22 17:05:23 -0400</span></p>
+       Last update on: <span>2016-04-29 12:02:03 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
