--- a/morea/01.unix/first.html
+++ b/morea/01.unix/first.html
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="using-variables">Using Variables</h1>
+  <h1 id="first-programs-using-variables">First Programs: Using Variables</h1>
 
 <ol>
   <li>Open PyCharm, and create a new project called “FirstPrograms”.</li>
@@ -99,7 +99,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-05 15:55:07 -0400</span></p>
+       Last update on: <span>2016-07-06 08:49:07 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
