--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -74,7 +74,7 @@
       <li>I recommend opening the project in a new window for now:<br /><a href="project1/OpenProject.png"><img src="project1/OpenProject.png" width="200" /></a></li>
     </ul>
   </li>
-  <li>Create 4 python files: <code>bye.py</code>, <code>convert.py</code>, <code>fun.py</code>, and <code>string.py</code>. To create a file, right-click on the project and select <code>New &gt; Python File</code>: <br /><a href="project1/NewFile.png"><img src="project1/NewFile.png" width="300" /></a></li>
+  <li>Create 5 python files: <code>bye.py</code>, <code>convert.py</code>, <code>fun.py</code>, <code>string.py</code>, and <code>madlibs.py</code>. To create a file, right-click on the project and select <code>New &gt; Python File</code>: <br /><a href="project1/NewFile.png"><img src="project1/NewFile.png" width="300" /></a></li>
 </ol>
 
 <!--  * `mkdir project1_uLogin1_uLogin2`
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-07 09:23:07 -0400</span></p>
+       Last update on: <span>2016-07-07 09:35:02 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
