update maths & mangle hw

--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -86,8 +86,8 @@
 
 <ol>
   <li>converting the string to all upper case letters</li>
-  <li>removing the second character</li>
-  <li>removing the second to last character</li>
+  <li>removing the third character</li>
+  <li>removing the third to last character</li>
 </ol>
 
 <p>For example:</p>
@@ -102,18 +102,18 @@
   <tbody>
     <tr>
       <td style="text-align: center">hellothere</td>
-      <td style="text-align: center">HLLOTHEE</td>
+      <td style="text-align: center">HELOTHRE</td>
     </tr>
     <tr>
       <td style="text-align: center">42 degrees Celsius</td>
-      <td style="text-align: center">4 DEGREES CELSIS</td>
+      <td style="text-align: center">42DEGREES CELSUS</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="submission">Submission</h2>
+<!--## Submission
 
-<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.</p>
+Once you're satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.-->
 
 <!--## Demonstration
 
@@ -155,7 +155,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-07 09:35:02 -0400</span></p>
+       Last update on: <span>2016-07-08 14:07:28 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
